Usando componete de listagem em outros componentes

--- a/frontend/src/app/components/positions/positions.component.html
+++ b/frontend/src/app/components/positions/positions.component.html
@@ -1,2 +1,3 @@
 <app-layout [title]="title">
+    <app-table [cols]="cols" [itens]="positions" path="/positions" (deleteEvent)="delete($event)"></app-table>
 </app-layout>
