--- a/frontend/src/app/components/shared/table/table.component.html
+++ b/frontend/src/app/components/shared/table/table.component.html
@@ -1,6 +1,11 @@
-<div class="table-responsive mt-3 mb-3" style="max-height: 400px; overflow-y: auto;">
-    <table class="table table-striped text-nowrap">
-        <thead class="table-dark">
+<div class="d-flex justify-content-end mb-1 mt-2">
+    <a [routerLink]="path" class="btn btn-primary btn-sm">
+        <i class="fas fa-plus"></i> Novo registro
+    </a>
+</div>
+<div class="table-responsive mt-1 mb-3" style="max-height: 400px; overflow-y: auto;">
+    <table class="table table-striped">
+        <thead class="table-dark text-nowrap">
             <tr>
                 <th *ngFor="let col of cols"> <i [ngClass]="col.icon" *ngIf="col.icon"></i> {{ col.label }}</th>
                 <th><i class="fas fa-cogs"></i> Ações</th>
@@ -9,10 +14,7 @@
         <tbody>
             <tr *ngFor="let item of itens">
                 <td *ngFor="let col of cols">
-                    {{ (col.key === 'positions' || col.key === 'employees') ? item[col.key].length :
-                    (col.key === 'created_by' || col.key === 'modified_by') ? (item[col.key] ? item[col.key].name : 'Não
-                    informado') :
-                    item[col.key] }}
+                    {{ itemValue(item, col.key) }}
                 </td>
                 <td>
                     <span class="btn-group btn-group-sm">
@@ -23,6 +25,11 @@
                             <i class="fas fa-trash-alt"></i>
                         </button>
                     </span>
+                </td>
+            </tr>
+            <tr *ngIf="itens.length == 0">
+                <td [attr.colspan]="cols.length + 1" class="text-center">
+                    Nenhum registro encontrado
                 </td>
             </tr>
         </tbody>
