--- a/frontend/src/app/components/shared/table/table.component.html
+++ b/frontend/src/app/components/shared/table/table.component.html
@@ -15,7 +15,8 @@
 <div class="row align-items-center" *ngIf="mode === 'view'">
     <div class="col-md-8 d-flex justify-content-end mb-3">
         <div class="input-group">
-            <input type="search" class="form-control" [(ngModel)]="search" (keyup)="filter()" placeholder="Digite sua busca aqui">
+            <input type="search" class="form-control" [(ngModel)]="search" (keyup)="filter()"
+                placeholder="Digite sua busca aqui">
             <span class="input-group-text"><i class="fas fa-search"></i></span>
         </div>
     </div>
@@ -28,7 +29,8 @@
         </div>
     </div>
     <div class="col-md-2 mb-3">
-        <a [routerLink]="[path,'new']" class="btn w-100" style="background-image: linear-gradient(to bottom, rgb(22, 51, 22), rgb(32, 78, 32)); color: white;">
+        <a [routerLink]="[path,'new']" class="btn w-100"
+            style="background-image: linear-gradient(to bottom, rgb(22, 51, 22), rgb(32, 78, 32)); color: white;">
             <i class="fas fa-plus"></i> Novo registro
         </a>
     </div>
@@ -48,6 +50,10 @@
                 </td>
                 <td>
                     <span class="btn-group btn-group-sm">
+                        <button *ngFor="let action of actions" (click)="onAction(action, item)" [class]="action.class"
+                            title="{{ action.title }}">
+                            <i [class]="action.icon"></i> {{ action.label }}
+                        </button>
                         <a [routerLink]="[path, 'edit',item.id]" class="btn btn-primary" title="Editar registro">
                             <i class="fas fa-edit"></i>
                         </a>
