--- a/frontend/src/app/components/forbidden/forbidden.component.html
+++ b/frontend/src/app/components/forbidden/forbidden.component.html
@@ -3,7 +3,7 @@
       <div class="row justify-content-center">
         <div class="col-md-8">
           <div class="alert alert-danger text-center" role="alert">
-            <h4 class="alert-heading">Acesso Negado</h4>
+            <h4 class="alert-heading">Acesso negado</h4>
             <p>Você não tem permissão para acessar esta página.</p>
             <hr>
             <p class="mb-0">Por favor, contate o administrador se você acredita que isso é um erro.</p>
