--- a/frontend/src/app/components/not-found/not-found.component.html
+++ b/frontend/src/app/components/not-found/not-found.component.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
         <div class="alert alert-danger text-center" role="alert">
-          <h4 class="alert-heading">Página Não Encontrada</h4>
+          <h4 class="alert-heading">Página não encontrada</h4>
           <p>Desculpe, a página que você está procurando não foi encontrada.</p>
           <hr>
           <p class="mb-0">Verifique o URL e tente novamente.</p>
