--- a/frontend/src/app/components/change-password/change-password.component.html
+++ b/frontend/src/app/components/change-password/change-password.component.html
@@ -8,23 +8,30 @@
               <div class="col-md-4 d-flex flex-column justify-content-center align-items-center bg-light text-center">
                 <i class="fas fa-user fa-5x mb-3"></i>
                 <p><i class="fas fa-user-circle"></i> Nome: {{ user?.name }}</p>
-                <p><i class="fas fa-calendar-alt"></i> Expira em: {{ user?.password_expires_at | date:'dd/MM/yyyy HH:mm:ss'  }}</p>
-              </div>
-              <div class="col-md-8">
-                <div class="alert alert-danger text-center mb-4" *ngIf="passwordExpired">
+                <p><i class="fas fa-calendar-alt"></i> Expira em: {{ user?.password_expires_at | date:'dd/MM/yyyy
+              HH:mm:ss' }}</p>
+              <p><i class="fas fa-building"></i> Departamento: {{ user?.department?.name }}</p>
+            </div>
+
+            <div class="col-md-8">
+              @if (passwordExpired) {
+                <div class="alert alert-danger text-center mb-4">
                   <h4 class="alert-heading">Senha expirada</h4>
                   <p class="mb-0">{{ message }}</p>
                 </div>
-                <div class="alert alert-success text-center mb-4" *ngIf="!passwordExpired && message != null">
+              }
+              @if (!passwordExpired && message != null) {
+                <div class="alert alert-success text-center mb-4">
                   <p class="mb-0">{{ message }}</p>
                 </div>
-                <form [formGroup]="form" (submit)="onSubmit()">
-                  <div class="mb-3">
-                    <label for="new_password" class="form-label">Nova senha:</label>
-                    <div class="input-group">
-                      <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                      <input [type]="showPassword ? 'text' : 'password'" id="password" class="form-control" placeholder="Nova senha"
-                        required formControlName="password">
+              }
+              <form [formGroup]="form" (submit)="onSubmit()">
+                <div class="mb-3">
+                  <label for="new_password" class="form-label">Nova senha:</label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                    <input [type]="showPassword ? 'text' : 'password'" id="password" class="form-control"
+                      placeholder="Nova senha" required formControlName="password">
                     </div>
                   </div>
                   <div class="mb-3">
@@ -33,24 +40,24 @@
                       <span class="input-group-text"><i class="fas fa-lock"></i></span>
                       <input [type]="showPassword ? 'text' : 'password'" id="password_confirmation" class="form-control"
                         placeholder="Confirmar nova senha" required formControlName="password_confirmation">
+                      </div>
                     </div>
-                  </div>
-                  <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="showPassword" (change)="toggleShowPassword()">
-                    <label class="form-check-label" for="showPassword">Mostrar senha</label>
-                  </div>
-                  <app-messages-validators [backendErrors]="backendErrors"></app-messages-validators>
-                  <div class="d-grid">
-                    <button type="submit" class="btn btn-primary">
-                      <i class="fas fa-redo"></i> Alterar
-                    </button>
-                  </div>
-                </form>
+                    <div class="mb-3 form-check">
+                      <input type="checkbox" class="form-check-input" id="showPassword" (change)="toggleShowPassword()">
+                      <label class="form-check-label" for="showPassword">Mostrar senha</label>
+                    </div>
+                    <app-messages-validators [backendErrors]="backendErrors"></app-messages-validators>
+                    <div class="d-grid">
+                      <button type="submit" class="btn btn-primary">
+                        <i class="fas fa-redo"></i> Alterar
+                      </button>
+                    </div>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</app-layout>
+  </app-layout>
