--- a/frontend/src/app/components/shared/message/message.component.html
+++ b/frontend/src/app/components/shared/message/message.component.html
@@ -1,3 +1,5 @@
-<div class="alert" [ngClass]="errorOccurred ? 'alert-danger' : 'alert-success'" *ngIf="message">
+@if (message) {
+  <div class="alert" [ngClass]="errorOccurred ? 'alert-danger' : 'alert-success'">
     {{ message }}
-</div>
+  </div>
+}
