--- a/frontend/src/app/components/auth/auth.component.html
+++ b/frontend/src/app/components/auth/auth.component.html
@@ -1,41 +1,43 @@
 <div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header text-center">
-                    <h4>Entrar</h4> 
-                </div>
-                <div class="card-body" *ngIf="mode == 'sign-in'">
-                    <form [formGroup]="signInForm" (submit)="signIn()">
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Email ou usuário:</label>
-                            <div class="input-group">
-                                <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                                <input type="text" class="form-control" placeholder="Entrar com seu email ou usuário"
-                                    required formControlName="login">
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <label for="password" class="form-label">Senha:</label>
-                            <div class="input-group">
-                                <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                                <input [type]="showPassword ? 'text' : 'password'" class="form-control"
-                                    placeholder="Entrar com sua senha" required formControlName="password">
-                            </div>
-                        </div>
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" (change)="toggleShowPassword()">
-                            <label class="form-check-label" for="showPassword">Mostrar senha</label>
-                        </div>
-                        <app-messages-validators [backendErrors]="backendErrors"></app-messages-validators>
-                        <div class="d-grid">
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fas fa-sign-in-alt"></i> Entrar
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            </div>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header text-center">
+          <h4>Entrar</h4>
         </div>
+        @if (mode == 'sign-in') {
+          <div class="card-body">
+            <form [formGroup]="signInForm" (submit)="signIn()">
+              <div class="mb-3">
+                <label for="email" class="form-label">Email ou usuário:</label>
+                <div class="input-group">
+                  <span class="input-group-text"><i class="fas fa-envelope"></i></span>
+                  <input type="text" class="form-control" placeholder="Entrar com seu email ou usuário"
+                    required formControlName="login">
+                  </div>
+                </div>
+                <div class="mb-3">
+                  <label for="password" class="form-label">Senha:</label>
+                  <div class="input-group">
+                    <span class="input-group-text"><i class="fas fa-lock"></i></span>
+                    <input [type]="showPassword ? 'text' : 'password'" class="form-control"
+                      placeholder="Entrar com sua senha" required formControlName="password">
+                    </div>
+                  </div>
+                  <div class="mb-3 form-check">
+                    <input type="checkbox" class="form-check-input" (change)="toggleShowPassword()">
+                    <label class="form-check-label" for="showPassword">Mostrar senha</label>
+                  </div>
+                  <app-messages-validators [backendErrors]="backendErrors"></app-messages-validators>
+                  <div class="d-grid">
+                    <button type="submit" class="btn btn-primary">
+                      <i class="fas fa-sign-in-alt"></i> Entrar
+                    </button>
+                  </div>
+                </form>
+              </div>
+            }
+          </div>
+        </div>
+      </div>
     </div>
-</div>
