--- a/frontend/src/app/components/shared/layout/layout.component.html
+++ b/frontend/src/app/components/shared/layout/layout.component.html
@@ -1,48 +1,54 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-image: linear-gradient(to bottom, rgb(34, 34, 34), rgb(17, 17, 34));"
->
-    <div class="container-fluid">
-        <h1 class="navbar-brand mb-0"><i class="fas fa-tasks"></i></h1>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"  *ngIf="user?.visibility == 1">
-                    <a class="nav-link text-white" routerLink="/departments">
-                        <i class="fas fa-building"></i> Departmentos
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" routerLink="/projects">
-                        <i class="fas fa-project-diagram"></i> Projetos
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" routerLink="/tasks">
-                        <i class="fas fa-tasks"></i> Tarefas
-                    </a>
-                </li>
-                <li class="nav-item"  *ngIf="user?.visibility !== 3">
-                    <a class="nav-link text-white" routerLink="/users">
-                        <i class="fas fa-user-friends"></i> Usuários
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" *ngIf="user">
-                        <i class="fas fa-user"></i> {{ user.username }} ({{ user.visibility_name }})
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link text-white" style="cursor: pointer;" (click)="signOut()">
-                        <i class="fas fa-sign-out-alt"></i> Sair
-                    </a>
-                </li>
-            </ul>
-        </div>
+  >
+  <div class="container-fluid">
+    <h1 class="navbar-brand mb-0"><i class="fas fa-tasks"></i></h1>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        @if (user?.visibility == 1) {
+          <li class="nav-item" >
+            <a class="nav-link text-white" routerLink="/departments">
+              <i class="fas fa-building"></i> Departmentos
+            </a>
+          </li>
+        }
+        <li class="nav-item">
+          <a class="nav-link text-white" routerLink="/projects">
+            <i class="fas fa-project-diagram"></i> Projetos
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" routerLink="/tasks">
+            <i class="fas fa-tasks"></i> Tarefas
+          </a>
+        </li>
+        @if (user?.visibility !== 3) {
+          <li class="nav-item" >
+            <a class="nav-link text-white" routerLink="/users">
+              <i class="fas fa-user-friends"></i> Usuários
+            </a>
+          </li>
+        }
+        <li class="nav-item">
+          @if (user) {
+            <a class="nav-link text-white">
+              <i class="fas fa-user"></i> {{ user.username }} ({{ user.visibility_name }})
+            </a>
+          }
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white" style="cursor: pointer;" (click)="signOut()">
+            <i class="fas fa-sign-out-alt"></i> Sair
+          </a>
+        </li>
+      </ul>
     </div>
+  </div>
 </nav>
 <div class="container-fluid mt-3 mb-3">
-    <h3 class="mb-4">{{ title }}</h3>
-    <ng-content></ng-content>
+  <h3 class="mb-4">{{ title }}</h3>
+  <ng-content></ng-content>
 </div>
