--- a/frontend/src/app/components/departments/departments.component.html
+++ b/frontend/src/app/components/departments/departments.component.html
@@ -1,4 +1,4 @@
-<app-layout title="Departamentos">
+<app-layout title="Departamentos  {{ total ? ' (' + total + ')' : '' }}">
     <app-message [message]="message"></app-message>
     <app-loading [loading]="loading"></app-loading>
     <app-card-form>
