--- a/frontend/src/app/components/shared/layout/layout.component.html
+++ b/frontend/src/app/components/shared/layout/layout.component.html
@@ -8,10 +8,10 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        @if (user?.visibility == 1) {
+        @if (user?.visibility == 'Administrador') {
           <li class="nav-item" >
             <a class="nav-link text-white" routerLink="/departments">
-              <i class="fas fa-building"></i> Departmentos
+              <i class="fas fa-building"></i> Departamentos
             </a>
           </li>
         }
@@ -25,7 +25,7 @@
             <i class="fas fa-tasks"></i> Tarefas
           </a>
         </li>
-        @if (user?.visibility !== 3) {
+        @if (user?.visibility !== 'Operacional') {
           <li class="nav-item" >
             <a class="nav-link text-white" routerLink="/users">
               <i class="fas fa-user-friends"></i> Usuários
@@ -35,7 +35,7 @@
         <li class="nav-item">
           @if (user) {
             <a class="nav-link text-white">
-              <i class="fas fa-user"></i> {{ user.username }} ({{ user.visibility_name }})
+              <i class="fas fa-user"></i> {{ user.username }} ({{ user.visibility }})
             </a>
           }
         </li>
