--- a/frontend/src/app/components/shared/table/table.component.html
+++ b/frontend/src/app/components/shared/table/table.component.html
@@ -38,8 +38,7 @@
     </div>
   </div>
   <div class="col-md-2 mb-3">
-    <a [routerLink]="[path,'new']" class="btn w-100"
-      style="background-image: linear-gradient(to bottom, rgb(22, 51, 22), rgb(32, 78, 32)); color: white;">
+    <a [routerLink]="[path,'new']" class="btn btn-success w-100">
       <i class="fas fa-plus"></i> Novo registro
     </a>
   </div>
@@ -50,7 +49,7 @@
     <thead class="table-dark text-nowrap">
       <tr>
         @for (col of cols; track col) {
-        <th> @if (col.icon) {
+        <th > @if (col.icon) {
           <i [ngClass]="col.icon"></i>
           } {{ col.label }}
         </th>
