--- a/frontend/src/app/components/users/users.component.html
+++ b/frontend/src/app/components/users/users.component.html
@@ -1,202 +1,205 @@
-<app-layout title="Usuários">
+<app-layout title="Usuários {{ total ? ' (' + total + ')' : '' }}">
   <app-message [message]="message"></app-message>
   <app-loading [loading]="loading"></app-loading>
   @if (mode == 'new' || mode == 'edit') {
-    <app-card-form>
-      <form [formGroup]="form" (submit)="onSubmit()">
-        <div class="row align-items-end">
-          <div class="col-md-6 mb-3">
+  <app-card-form>
+    <form [formGroup]="form" (submit)="onSubmit()">
+      <div class="row align-items-end">
+        <div class="col-md-6 mb-3">
+          <div class="form-group">
+            <label for="name">
+              <i class="fas fa-id-badge"></i> Nome
+            </label>
+            <input id="name" formControlName="name" type="text" class="form-control" required placeholder="Nome">
+          </div>
+        </div>
+        <div class="col-md-6 mb-3">
+          <div class="form-group">
+            <label for="email">
+              <i class="fas fa-envelope"></i> Email
+            </label>
+            <input id="email" formControlName="email" type="email" class="form-control" maxlength="100"
+              placeholder="Email">
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="form-group">
+            <label for="username">
+              <i class="fas fa-user"></i> Usuário
+            </label>
+            <input id="username" formControlName="username" type="text" class="form-control" maxlength="100"
+              placeholder="Usuário">
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="form-group">
+            <label for="department_id" class="d-flex align-items-center">
+              <i class="fas fa-building me-2"></i> Departamento
+              <span class="text-danger ms-2 small">
+                (Somente administradores têm acesso)
+              </span>
+            </label>
+            <div class="input-group">
+              <select id="department_id" formControlName="department_id" class="form-control"
+                [disabled]="user?.visibility !== 'Administrador'">
+                <option value="" disabled selected>Selecione um departamento</option>
+                <option *ngFor="let department of departments" [value]="department.id"
+                  [disabled]="user?.visibility !== 'Administrador'">
+                  {{ department.name }}
+                </option>
+              </select>
+              <button type="button" class="btn btn-success" (click)="openModalDepartment()"
+                [disabled]="user?.visibility !== 'Administrador'">
+                <i class="fas fa-plus"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mb-3">
+          <div class="form-group">
+            <label for="type">
+              <i class="fas fa-eye"></i> Visibilidade
+            </label>
+            <select class="form-select" formControlName="visibility">
+              <option value="Administrador">Administrador</option>
+              <option value="Gerente">Gerente</option>
+              <option value="Operacional">Operacional</option>
+            </select>
+          </div>
+        </div>
+        @if(mode === 'new'){
+        <div class="col-md-4 mb-3">
+          <div class="form-group">
+            <label for="password">
+              <i class="fas fa-key"></i> Senha
+            </label>
+            <input id="password" formControlName="password" [type]="showPassword ? 'text' : 'password'"
+              class="form-control" maxlength="100" placeholder="Senha de acesso">
+          </div>
+        </div>
+        <div class="col-md-4 mb-3">
+          <div class="form-group">
+            <label for="password_confirmation">
+              <i class="fas fa-lock"></i> Confirmação de senha
+            </label>
+            <div class="input-group">
+              <input id="password_confirmation" formControlName="password_confirmation"
+                [type]="showPassword ? 'text' : 'password'" class="form-control" maxlength="100"
+                placeholder="Confirmar senha">
+              <button type="button" class="btn btn-outline-secondary" (click)="toggleShowPassword()">
+                <i class="fas" [ngClass]="showPassword ? 'fa-eye-slash' : 'fa-eye'"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        }
+        <div class="col-md-4 mb-3">
+          <app-button-submit></app-button-submit>
+        </div>
+        <app-messages-validators [backendErrors]="backendErrors"></app-messages-validators>
+      </div>
+    </form>
+  </app-card-form>
+  }
+  <app-table [itens]="users" [cols]="cols" path="/users" [pages]="pages" (showEvent)="show($event)"
+    (deleteEvent)="delete($event)" [actions]="actions"></app-table>
+</app-layout>
+
+<div class="modal" id="departmentModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-title fs-5">Novo departamento</div>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="formDepartment" (submit)="onSubmitDepartment()">
+          <div class="mb-3">
+            <div class="form-group">
+              <label for="name">
+                <i class="fas fa-tag"></i> Nome
+              </label>
+              <input id="name" formControlName="name" type="text" class="form-control" placeholder="Nome" required />
+            </div>
+          </div>
+          <div class="mb-3">
+            <div class="form-group">
+              <label for="description">
+                <i class="fas fa-info-circle"></i> Descrição (Opcional)
+              </label>
+              <input id="description" formControlName="description" type="text" class="form-control" maxlength="100"
+                placeholder="Descrição (Máximo 100 caracteres).">
+            </div>
+          </div>
+          <app-messages-validators [backendErrors]="backendDepartmentErrors"></app-messages-validators>
+          <app-button-submit></app-button-submit>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal" id="changePasswordModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <div class="modal-title fs-5">Alterar senha</div>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form [formGroup]="formChangePassword" (submit)="changePassword()">
+          <div class="mb-3">
             <div class="form-group">
               <label for="name">
                 <i class="fas fa-id-badge"></i> Nome
               </label>
-              <input id="name" formControlName="name" type="text" class="form-control" required
-                placeholder="Nome">
-              </div>
+              <input type="text" class="form-control" required readonly disabled value="{{ user?.name }}" />
             </div>
-            <div class="col-md-6 mb-3">
-              <div class="form-group">
-                <label for="email">
-                  <i class="fas fa-envelope"></i> Email
-                </label>
-                <input id="email" formControlName="email" type="email" class="form-control" maxlength="100"
-                  placeholder="Email">
-                </div>
-              </div>
-              <div class="col-md-3 mb-3">
-                <div class="form-group">
-                  <label for="username">
-                    <i class="fas fa-user"></i> Usuário
-                  </label>
-                  <input id="username" formControlName="username" type="text" class="form-control" maxlength="100"
-                    placeholder="Usuário">
-                  </div>
-                </div>
-                @if (user?.visibility == 1) {
-                  <div class="col-md-3 mb-3">
-                    <div class="form-group">
-                      <label for="department_id">
-                        <i class="fas fa-building"></i> Departamento
-                      </label>
-                      <div class="input-group">
-                        <select id="department_id" formControlName="department_id" class="form-control">
-                          <option value="" disabled selected>Selecione um departamento</option>
-                          @for (department of departments; track department) {
-                            <option [value]="department.id">
-                              {{ department.name }}
-                            </option>
-                          }
-                        </select>
-                        <button type="button" class="btn btn-success" (click)="openModalDepartment()">
-                          <i class="fas fa-plus"></i>
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                }
-                <div class="col-md-3 mb-3">
-                  <div class="form-group">
-                    <label for="type">
-                      <i class="fas fa-eye"></i> Visibilidade
-                    </label>
-                    <select class="form-select" formControlName="visibility">
-                      <option value="1">Administrador</option>
-                      <option value="2">Gerente</option>
-                      <option value="3">Operacional</option>
-                    </select>
-                  </div>
-                </div>
-                @if (mode == 'new') {
-                  <div class="col-md-3 mb-3">
-                    <div class="form-group">
-                      <label for="password">
-                        <i class="fas fa-key"></i> Senha
-                      </label>
-                      <input id="password" formControlName="password" type="password" class="form-control"
-                        maxlength="100" placeholder="Senha de acesso">
-                      </div>
-                    </div>
-                  }
-                  @if (mode == 'new') {
-                    <div class="col-md-3 mb-3">
-                      <div class="form-group">
-                        <label for="password_confirmation">
-                          <i class="fas fa-lock-open"></i> Confirmação de senha
-                        </label>
-                        <input id="password_confirmation" formControlName="password_confirmation" type="password"
-                          class="form-control" maxlength="100" placeholder="Confirmar senha">
-                        </div>
-                      </div>
-                    }
-                    <div class="col-md-3 mb-3">
-                      <app-button-submit></app-button-submit>
-                    </div>
-                  </div>
-                </form>
-                <app-messages-validators [backendErrors]="backendErrors"></app-messages-validators>
-              </app-card-form>
-            }
-            <app-table [itens]="users" [cols]="cols" path="/users" [pages]="pages" (showEvent)="show($event)"
-            (deleteEvent)="delete($event)"  [actions]="actions"></app-table>
-          </app-layout>
-
-          <div class="modal" id="departmentModal">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <div class="modal-title fs-5">Novo departamento</div>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  <form [formGroup]="formDepartment" (submit)="onSubmitDepartment()">
-                    <div class="mb-3">
-                      <div class="form-group">
-                        <label for="name">
-                          <i class="fas fa-tag"></i> Nome
-                        </label>
-                        <input id="name" formControlName="name" type="text" class="form-control" placeholder="Nome"
-                          required />
-                        </div>
-                      </div>
-                      <div class="mb-3">
-                        <div class="form-group">
-                          <label for="description">
-                            <i class="fas fa-info-circle"></i> Descrição (Opcional)
-                          </label>
-                          <input id="description" formControlName="description" type="text" class="form-control"
-                            maxlength="100" placeholder="Descrição (Máximo 100 caracteres).">
-                          </div>
-                        </div>
-                        <app-messages-validators [backendErrors]="backendDepartmentErrors"></app-messages-validators>
-                        <app-button-submit></app-button-submit>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="modal" id="changePasswordModal">
-                <div class="modal-dialog">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <div class="modal-title fs-5">Alterar senha</div>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                      <form [formGroup]="formChangePassword" (submit)="changePassword()">
-                        <div class="mb-3">
-                          <div class="form-group">
-                            <label for="name">
-                              <i class="fas fa-id-badge"></i> Nome
-                            </label>
-                            <input type="text" class="form-control"
-                              required readonly disabled value="{{ user?.name }}"/>
-                            </div>
-                          </div>
-                          <div class="mb-3">
-                            <div class="form-group">
-                              <label for="name">
-                                <i class="fas fa-user"></i> Usuário
-                              </label>
-                              <input type="text" class="form-control"
-                                required readonly disabled value="{{ user?.username }}"/>
-                              </div>
-                            </div>
-                            <div class="mb-3">
-                              <div class="form-group">
-                                <label for="name">
-                                  <i class="fas fa-envelope"></i> Email
-                                </label>
-                                <input type="text" class="form-control"
-                                  required readonly disabled value="{{ user?.email }}"/>
-                                </div>
-                              </div>
-                              <div class="mb-3">
-                                <div class="form-group">
-                                  <label for="password">
-                                    <i class="fas fa-key"></i> Senha
-                                  </label>
-                                  <input id="password" formControlName="password" [type]="showPassword ? 'text' : 'password'" class="form-control"
-                                    maxlength="100" placeholder="Senha">
-                                  </div>
-                                </div>
-                                <div class="mb-3">
-                                  <div class="form-group">
-                                    <label for="password_confirmation">
-                                      <i class="fas fa-lock-open"></i> Confirmação de senha
-                                    </label>
-                                    <input id="password_confirmation" formControlName="password_confirmation" [type]="showPassword ? 'text' : 'password'"
-                                      class="form-control" maxlength="100" placeholder="Confirmação de senha">
-                                    </div>
-                                  </div>
-                                  <div class="mb-3 form-check">
-                                    <input type="checkbox" class="form-check-input" (change)="toggleShowPassword()">
-                                    <label class="form-check-label" for="showPassword">Mostrar senha</label>
-                                  </div>
-                                  <app-messages-validators [backendErrors]="backendPasswordErrors"></app-messages-validators>
-                                  <app-button-submit></app-button-submit>
-                                </form>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
+          </div>
+          <div class="mb-3">
+            <div class="form-group">
+              <label for="name">
+                <i class="fas fa-user"></i> Usuário
+              </label>
+              <input type="text" class="form-control" required readonly disabled value="{{ user?.username }}" />
+            </div>
+          </div>
+          <div class="mb-3">
+            <div class="form-group">
+              <label for="name">
+                <i class="fas fa-envelope"></i> Email
+              </label>
+              <input type="text" class="form-control" required readonly disabled value="{{ user?.email }}" />
+            </div>
+          </div>
+          <div class="mb-3">
+            <div class="form-group">
+              <label for="password">
+                <i class="fas fa-key"></i> Senha
+              </label>
+              <input id="password" formControlName="password" [type]="showPassword ? 'text' : 'password'"
+                class="form-control" maxlength="100" placeholder="Senha">
+            </div>
+          </div>
+          <div class="mb-3">
+            <div class="form-group">
+              <label for="password_confirmation">
+                <i class="fas fa-lock-open"></i> Confirmação de senha
+              </label>
+              <input id="password_confirmation" formControlName="password_confirmation"
+                [type]="showPassword ? 'text' : 'password'" class="form-control" maxlength="100"
+                placeholder="Confirmação de senha">
+            </div>
+          </div>
+          <div class="mb-3 form-check">
+            <input type="checkbox" class="form-check-input" (change)="toggleShowPassword()">
+            <label class="form-check-label" for="showPassword">Mostrar senha</label>
+          </div>
+          <app-messages-validators [backendErrors]="backendPasswordErrors"></app-messages-validators>
+          <app-button-submit></app-button-submit>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
